build/apps/traefik/overlays/prod/deployment-log-level.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik-deployment
spec:
  template:
    spec:
      containers:
        - name: traefik
          args:
            - --log.level=DEBUG
