build/apps/traefik/overlays/prod/deployment-ssl-init-container.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: treafik-deployment
spec:
  template:
    spec:
      volumes:
        - name: ssl-certs
          persistentVolumeClaim:
            claimName: treafik-ssl-certs
      containers:
        - name: traefik
          volumeMounts:
          - mountPath: /certs
            name: ssl-certs
