build/apps/traefik/overlays/prod/deployment-ssl-patch.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik-deployment
spec:
  template:
    spec:
      volumes:
        - name: ssl-certs
          persistentVolumeClaim:
            claimName: traefik-ssl-certs
      containers:
        - name: traefik
          args:
            - --entrypoints.websecure.http.tls.domains[0].main=graytonward.com
            - --entrypoints.websecure.http.tls.domains[0].sans=*.graytonward.com
            - --certificatesresolvers.cloudflare.acme.dnschallenge.provider=cloudflare
            - --entrypoints.websecure.http.tls.certresolver=cloudflare
            - --certificatesresolvers.cloudflare.acme.email=g-buddy@comcast.net
            - --certificatesresolvers.cloudflare.acme.dnschallenge.resolvers=1.1.1.1
            - --certificatesresolvers.cloudflare.acme.storage=/certs/acme.json
            - --certificatesresolvers.cloudflare.acme.caServer=https://acme-staging-v02.api.letsencrypt.org/directory
          volumeMounts:
          - name: ssl-certs
            mountPath: /certs
