build/apps/traefik/overlays/prod/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Traefik Dashboard
    gethomepage.dev/group: Operations
    gethomepage.dev/icon: traefik.png
    gethomepage.dev/name: Traefik
    gethomepage.dev/widget.type: traefik
    gethomepage.dev/widget.url: http://traefik-service.traefik.svc:8080
  labels:
    app.kubernetes.io/name: traefik-dashboard
spec:
  rules:
  - host: traefik.graytonward.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: traefik-service
            port: 
              name: dashboard
